--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -66,6 +66,8 @@
 		<!-- build:js({.tmp,app/frontend}) js/scripts.js -->
 		<script src="js/app.js"></script>
 		<script src="js/services/InterceptorService.js"></script>
+    <script src="js/services/GoogleSpreadsheetService.js"></script>
+    <script src="js/services/OKRService.js"></script>
 		<script src="js/controllers/main.js"></script>
 		<script src="js/controllers/admin.js"></script>
 		<script src="js/controllers/auth.js"></script>
