--- a/okr-app/app/frontend/index.html
+++ b/okr-app/app/frontend/index.html
@@ -53,12 +53,10 @@
 		<!-- build:js({.tmp,app/frontend}) js/scripts.js -->
 		<script src="js/app.js"></script>
 		<script src="js/services/InterceptorService.js"></script>
-    <script src="js/services/GoogleSpreadsheetService.js"></script>
-    <script src="js/services/OKRService.js"></script>
+    <script src="js/services/AuthService.js"></script>
 		<script src="js/controllers/main.js"></script>
 		<script src="js/controllers/admin.js"></script>
-		<script src="js/controllers/auth.js"></script>
-		<script src="js/controllers/404.js"></script>
+		<script src="js/controllers/header.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
